crates/schemas/tests/snapshots/schema_evolution_wire_tests__wire_calibration_type_all.snap
---
source: crates/schemas/tests/schema_evolution_wire_tests.rs
expression: val
---
[
  "Center",
  "Range",
  "Pedals",
  "Full"
]
