crates/schemas/tests/snapshots/schema_evolution_wire_tests__wire_device_state_all.snap
---
source: crates/schemas/tests/schema_evolution_wire_tests.rs
expression: val
---
[
  "Disconnected",
  "Connected",
  "Active",
  "Faulted",
  "SafeMode"
]
