crates/schemas/tests/snapshots/schema_evolution_wire_tests__wire_device_type_all.snap
---
source: crates/schemas/tests/schema_evolution_wire_tests.rs
expression: val
---
[
  "Other",
  "WheelBase",
  "SteeringWheel",
  "Pedals",
  "Shifter",
  "Handbrake",
  "ButtonBox"
]
